src/main/java/com/example/formservice/handler/error/exception/UnauthorizedException.java
package com.example.formservice.handler.error.exception;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
